--- a/src/TestEncCnvtrs/TestEncCnvtrs.dll.config
+++ b/src/TestEncCnvtrs/TestEncCnvtrs.dll.config
@@ -13,12 +13,12 @@
 		</assemblyBinding>
 	</runtime>
 	<dllmap dll="IcuConvEC">
-		<dllentry os="linux" dll="libIcuConvEC.so.1.0"/>
+		<dllentry os="linux" dll="libIcuConvEC.so"/>
 	</dllmap>
 	<dllmap dll="IcuRegexEC">
-		<dllentry os="linux" dll="libIcuRegexEC.so.1.0"/>
+		<dllentry os="linux" dll="libIcuRegexEC.so"/>
 	</dllmap>
 	<dllmap dll="IcuTranslitEC">
-		<dllentry os="linux" dll="libIcuTranslitEC.so.1.0"/>
+		<dllentry os="linux" dll="libIcuTranslitEC.so"/>
 	</dllmap>
 </configuration>
