--- a/Makefile.in
+++ b/Makefile.in
@@ -77,6 +77,7 @@ distclean: clean
 	done
 	@rm -f Makefile config.cache src/config.h config.log config.status
 	@rm -f src/stamp-h1
+	@rm -f aclocal.m4 configure
 	@rm -f autogen.err TestResult.xml src/TestEncCnvtrs/TestEncCnvtrs.pidb
 	@rm -rf autom4te.cache output build/Obj src/TestEncCnvtrs/test-results
 	@rm -rf $(OUTDIR) $(RELEASEDIR)
