--- a/src/IcuEC/IcuEC.dll.config
+++ b/src/IcuEC/IcuEC.dll.config
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<dllmap dll="IcuConvEC">
-		<dllentry os="linux" dll="libIcuConvEC.so.1.0"/>
+		<dllentry os="linux" dll="libIcuConvEC.so"/>
 	</dllmap>
 	<dllmap dll="IcuRegexEC">
-		<dllentry os="linux" dll="libIcuRegexEC.so.1.0"/>
+		<dllentry os="linux" dll="libIcuRegexEC.so"/>
 	</dllmap>
 	<dllmap dll="IcuTranslitEC">
-		<dllentry os="linux" dll="libIcuTranslitEC.so.1.0"/>
+		<dllentry os="linux" dll="libIcuTranslitEC.so"/>
 	</dllmap>
 </configuration>
