--- a/src/ECInterfaces/ECInterfaces-mono.csproj
+++ b/src/ECInterfaces/ECInterfaces-mono.csproj
@@ -40,7 +40,6 @@
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>..\..\output\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <!--<DefineConstants>DEBUG;TRACE;COMMON_DATA_FW</DefineConstants>-->
     <RegisterForComInterop>true</RegisterForComInterop>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
@@ -54,7 +53,6 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <OutputPath>..\..\output\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <!--<DefineConstants>TRACE;COMMON_DATA_FW</DefineConstants>-->
     <Optimize>true</Optimize>
     <RegisterForComInterop>true</RegisterForComInterop>
     <DebugType>pdbonly</DebugType>
@@ -64,6 +62,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(FIELDWORKS)'!=''">
+    <DefineConstants>$(DefineConstants);COMMON_DATA_FW</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
