--- a/src/EncCnvtrs/EncCnvtrs-mono.csproj
+++ b/src/EncCnvtrs/EncCnvtrs-mono.csproj
@@ -88,10 +88,10 @@
       <HintPath>..\..\output\Debug\ECInterfaces.dll</HintPath>
     </Reference>
     <Reference Include="geckofx-core-14">
-      <HintPath>..\..\DistFiles\linux\geckofx\geckofx-core-14.dll</HintPath>
+      <HintPath>/usr/lib/cli/geckofx-14.0.1/geckofx-core-14.dll</HintPath>
     </Reference>
     <Reference Include="Geckofx-Winforms-14">
-      <HintPath>..\..\DistFiles\linux\geckofx\Geckofx-Winforms-14.dll</HintPath>
+      <HintPath>/usr/lib/cli/geckofx-14.0.1/Geckofx-Winforms-14.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <Name>System</Name>
