--- a/src/IcuEC/Makefile.in
+++ b/src/IcuEC/Makefile.in
@@ -4,6 +4,7 @@
 # 06-Jun-13 JDK  Remove library version numbers.
 # 16-Jul-13 SMc  Add conditional test for FIELDWORKS (requires GNU Make)
 # 18-Jul-13 SMc  Add $(WIDTH) to distinguish 32-bit from 64-bit output
+# 12-Aug-13 SMc  Add $(ICUPATH), $(ICULIBS), and $(ICUINCLUDE) for FieldWorks build
 
 VPATH       = @srcdir@
 CXX         = @CXX@
@@ -22,8 +23,13 @@ ECHEADERDIR=../EncCnvtrs/lib
 ECHEADER=$(ECHEADERDIR)/CEncConverter.h
 ifeq ($(strip $(FIELDWORKS)),)
 LIBDIR = $(exec_prefix)/lib/encConverters
+ICULIBS = -licuuc -licui18n
+ICUINCLUDE = 
 else
 LIBDIR = $(exec_prefix)/lib/fieldworks
+ICUPATH := $(shell find $(HOME) -name libicuuc.so -print | grep /Lib/src/icu/install | sort | head -1 | xargs dirname)
+ICULIBS := $(ICUPATH)/libicuuc.so $(ICUPATH)/libicui18n.so
+ICUINCLUDE := -I$(shell find $(HOME) -name ucnv.h -print | grep /Lib/src/icu/install.*/unicode/ucnv.h | sort | head -1 | xargs dirname | xargs dirname)
 endif
 
 # the unmarked case is 32-bit (i686)
@@ -43,34 +49,34 @@ $(OUTDIR)/libIcuTranslitEC$(WIDTH).so: $(BUILDDIR)/IcuTranslitEC.o \
   $(OUTDIR)/IcuEC.dll.config
 	g++ -shared -Wl,-soname,libIcuTranslitEC$(WIDTH).so \
   -o $(OUTDIR)/libIcuTranslitEC$(WIDTH).so $(BUILDDIR)/IcuTranslitEC.o \
-  -licuuc -licui18n
+  $(ICULIBS)
 
 $(OUTDIR)/libIcuRegexEC$(WIDTH).so: $(BUILDDIR)/IcuRegexEC.o \
   $(OUTDIR)/IcuEC.dll.config
 	g++ -shared -Wl,-soname,libIcuRegexEC$(WIDTH).so \
   -o $(OUTDIR)/libIcuRegexEC$(WIDTH).so $(BUILDDIR)/IcuRegexEC.o \
-  -licuuc -licui18n
+  $(ICULIBS)
 
 $(OUTDIR)/libIcuConvEC$(WIDTH).so: $(BUILDDIR)/IcuConvEC.o \
   $(OUTDIR)/IcuEC.dll.config
 	g++ -shared -Wl,-soname,libIcuConvEC$(WIDTH).so \
   -o $(OUTDIR)/libIcuConvEC$(WIDTH).so $(BUILDDIR)/IcuConvEC.o \
-  -licuuc -licui18n
+  $(ICULIBS)
 
 $(OUTDIR)/IcuEC.dll.config: IcuEC.dll.config
 	cp IcuEC.dll.config $(OUTDIR)
 
 $(BUILDDIR)/IcuTranslitEC.o: IcuTranslitEC.cpp IcuTranslitEC.h $(ECHEADER)
 	g++ -Wall -fPIC -c IcuTranslitEC.cpp -o $(BUILDDIR)/IcuTranslitEC.o \
-  -I$(ECHEADERDIR)
+  -I$(ECHEADERDIR) $(ICUINCLUDE)
 
 $(BUILDDIR)/IcuRegexEC.o: IcuRegexEC.cpp IcuRegexEC.h $(ECHEADER)
 	g++ -Wall -fPIC -c IcuRegexEC.cpp -o $(BUILDDIR)/IcuRegexEC.o \
-  -I$(ECHEADERDIR)
+  -I$(ECHEADERDIR) $(ICUINCLUDE)
 
 $(BUILDDIR)/IcuConvEC.o: IcuConvEC.cpp IcuConvEC.h $(ECHEADER)
 	g++ -Wall -fPIC -c IcuConvEC.cpp -o $(BUILDDIR)/IcuConvEC.o \
-  -I$(ECHEADERDIR)
+  -I$(ECHEADERDIR) $(ICUINCLUDE)
 
 release: $(RELEASEBLD) $(RELEASEOUT)/libIcuTranslitEC$(WIDTH).so \
   $(RELEASEOUT)/libIcuRegexEC$(WIDTH).so $(RELEASEOUT)/libIcuConvEC$(WIDTH).so
@@ -83,33 +89,33 @@ $(RELEASEOUT)/libIcuTranslitEC$(WIDTH).so: $(RELEASEBLD)/IcuTranslitEC.o \
   $(RELEASEOUT)/IcuEC.dll.config
 	g++ -shared -Wl,-soname,libIcuTranslitEC$(WIDTH).so \
   -o $(RELEASEOUT)/libIcuTranslitEC$(WIDTH).so $(RELEASEBLD)/IcuTranslitEC.o \
-  -licuuc -licui18n
+  $(ICULIBS)
 
 $(RELEASEOUT)/libIcuRegexEC$(WIDTH).so: $(RELEASEBLD)/IcuRegexEC.o \
   $(RELEASEOUT)/IcuEC.dll.config
 	g++ -shared -Wl,-soname,libIcuRegexEC$(WIDTH).so \
   -o $(RELEASEOUT)/libIcuRegexEC$(WIDTH).so $(RELEASEBLD)/IcuRegexEC.o \
-  -licuuc -licui18n
+  $(ICULIBS)
 
 $(RELEASEOUT)/libIcuConvEC$(WIDTH).so: $(RELEASEBLD)/IcuConvEC.o \
   $(RELEASEOUT)/IcuEC.dll.config
 	g++ -shared -Wl,-soname,libIcuConvEC$(WIDTH).so \
   -o $(RELEASEOUT)/libIcuConvEC$(WIDTH).so $(RELEASEBLD)/IcuConvEC.o \
-  -licuuc -licui18n
+  $(ICULIBS)
 
 $(RELEASEOUT)/IcuEC.dll.config: IcuEC.dll.config
 	cp IcuEC.dll.config $(RELEASEOUT)
 
 $(RELEASEBLD)/IcuTranslitEC.o: IcuTranslitEC.cpp IcuTranslitEC.h $(ECHEADER)
-	g++ -Wall -fPIC -O -I$(ECHEADERDIR) -c IcuTranslitEC.cpp \
+	g++ -Wall -fPIC -O -I$(ECHEADERDIR) $(ICUINCLUDE) -c IcuTranslitEC.cpp \
   -o $(RELEASEBLD)/IcuTranslitEC.o
 
 $(RELEASEBLD)/IcuRegexEC.o: IcuRegexEC.cpp IcuRegexEC.h $(ECHEADER)
-	g++ -Wall -fPIC -O -I$(ECHEADERDIR) -c IcuRegexEC.cpp \
+	g++ -Wall -fPIC -O -I$(ECHEADERDIR) $(ICUINCLUDE) -c IcuRegexEC.cpp \
   -o $(RELEASEBLD)/IcuRegexEC.o
 
 $(RELEASEBLD)/IcuConvEC.o: IcuConvEC.cpp IcuConvEC.h $(ECHEADER)
-	g++ -Wall -fPIC -O -I$(ECHEADERDIR) -c IcuConvEC.cpp \
+	g++ -Wall -fPIC -O -I$(ECHEADERDIR) $(ICUINCLUDE) -c IcuConvEC.cpp \
   -o $(RELEASEBLD)/IcuConvEC.o
 
 clean:
