--- a/src/IcuEC/IcuEC 2010.csproj
+++ b/src/IcuEC/IcuEC 2010.csproj
@@ -101,6 +101,11 @@
     <Compile Include="IcuTranslitConfig.cs" />
     <Compile Include="IcuTranslitEncConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Resources.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -116,6 +121,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="IcuConvAutoConfigDialog.resx">
+      <DependentUpon>IcuConvAutoConfigDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IcuRegexAutoConfigDialog.resx">
+      <DependentUpon>IcuRegexAutoConfigDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IcuTranslitAutoConfigDialog.resx">
+      <DependentUpon>IcuTranslitAutoConfigDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources.resx" />
   </ItemGroup>
   <ItemGroup>
@@ -134,6 +148,13 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
