--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: enc-converters
 Priority: optional
 Maintainer: Stephen McConnel <stephen_mcconnel@sil.org>
 Build-Depends: debhelper (>= 7.0.50~), autotools-dev, python-dev (>=2.6),
- libicu-dev, lsb-release, devscripts, fieldworks-mono, mono-devel, mono-gmcs
+ libicu-dev, lsb-release, devscripts, mono-devel, mono-gmcs, geckofx29
 Standards-Version: 3.9.1
 Section: libs
 Homepage: http://hg.palaso.org/ec-main
@@ -10,9 +10,7 @@ Homepage: http://hg.palaso.org/ec-main
 Package: enc-converters
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Recommends: libsilcc0
-Suggests: fieldworks
+Depends: ${shlibs:Depends}, ${misc:Depends}, libsilcc0, geckofx29
 Description: Encoding Converter libraries.
  This provides a uniform interface to a variety of character encoding
  converters.
