--- a/src/PyScriptEC/Makefile.in
+++ b/src/PyScriptEC/Makefile.in
@@ -4,6 +4,7 @@
 # 06-Jun-13 JDK  Remove library version numbers.
 # 16-Jul-13 SMc  Add conditional test for FIELDWORKS (requires GNU Make)
 # 18-Jul-13 SMc  Add $(WIDTH) to distinguish 32-bit from 64-bit output
+# 15-Apr-15 SMc  Add packageclean target
 
 VPATH       = @srcdir@
 CXX         = @CXX@
@@ -82,7 +83,9 @@ clean:
 	rm -f $(RELEASEBLD)/PyScriptEncConverter.o
 	rm -f $(RELEASEOUT)/libPyScriptEncConverter$(WIDTH).so*
 
-distclean: clean
+packageclean: clean
+
+distclean: packageclean
 	rm -f Makefile
 
 install: release PyScriptEC.dll.config
