--- a/debian/rules
+++ b/debian/rules
@@ -13,9 +13,8 @@ export DH_OPTIONS=-v
 %:
 	dh $@ 
 
-override_dh_shlibdeps:
-	if grep -e -L/usr/lib/fieldworks/mono/lib Makefile; then \
-		LD_LIBRARY_PATH=/usr/lib/fieldworks/mono/lib:$$LD_LIBRARY_PATH dh_shlibdeps; \
-	else \
-		dh_shlibdeps; \
-	fi
+override_dh_auto_clean:
+	$(MAKE) packageclean
+
+# don't try to run the tests while packaging!
+override_dh_auto_test:
