--- a/debian-fieldworks/control
+++ b/debian-fieldworks/control
@@ -12,6 +12,7 @@ Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, mono-sil, libsilcc0, geckofx29
 Suggests: fieldworks
+Conflicts: enc-converters
 Description: Encoding Converter libraries.
  This provides a uniform interface to a variety of character encoding
  converters.  This is designed to be used with fieldworks, building and
