--- a/debian-fieldworks/control
+++ b/debian-fieldworks/control
@@ -2,7 +2,8 @@ Source: fieldworks-enc-converters
 Priority: optional
 Maintainer: Stephen McConnel <stephen_mcconnel@sil.org>
 Build-Depends: debhelper (>= 7.0.50~), autotools-dev, python-dev (>=2.6),
- libicu-dev, lsb-release, devscripts, mono-sil, geckofx29
+ dh-autoreconf, libicu-dev, lsb-release, devscripts, mono-sil,
+ libgdiplus-sil, geckofx29
 Standards-Version: 3.9.1
 Section: libs
 Homepage: http://hg.palaso.org/ec-main
@@ -10,7 +11,8 @@ Homepage: http://hg.palaso.org/ec-main
 Package: fieldworks-enc-converters
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, mono-sil, libsilcc0, geckofx29
+Depends: ${shlibs:Depends}, ${misc:Depends}, mono-sil, libgdiplus-sil,
+ libsilcc0, geckofx29
 Suggests: fieldworks
 Conflicts: enc-converters
 Description: Encoding Converter libraries.
