--- a/Makefile.in
+++ b/Makefile.in
@@ -40,47 +40,47 @@ PLUGINS = "AI 4.0.0.0 Plugin Details.xml" "CC 4.0.0.0 Plugin Details.xml" \
 all: debug
 
 debug:
-	@(cd build && ./xbuild.sh $(MONO) $(MONO_LDFLAGS) /property:FIELDWORKS=$(FIELDWORKS)) || true
+	@cd build && ./xbuild.sh $(MONO) $(MONO_LDFLAGS) /property:FIELDWORKS=$(FIELDWORKS)
 	@for subdir in $(SRCDIRS); do \
 	  echo making in $$subdir; \
-	  (cd $$subdir && $(MAKE) all FIELDWORKS=$(FIELDWORKS)) || true; \
+	  (cd $$subdir && $(MAKE) all FIELDWORKS=$(FIELDWORKS)) || break; \
 	done
 	@mkdir -p $(OUTDIR)/EC/Plugins
 	@for file in $(PLUGINS); do \
 	  cp -p redist/EC/Plugins/"$$file" $(OUTDIR)/EC/Plugins; \
 	done
-	@if [ -n $(FIELDWORKS) ]; then (cp -pR redist/Help $(OUTDIR)); fi || true
+	@if [ -n $(FIELDWORKS) ]; then cp -pR redist/Help $(OUTDIR); fi
 	@cp -p redist/libTECkit*.so $(OUTDIR)
 	@cp -p src/EncCnvtrs/SilEncConverters40.dll.config $(OUTDIR)
 	@cp -p src/CcEC/CcEC.dll.config $(OUTDIR)
 	@cp -p src/TestEncCnvtrs/TestEncCnvtrs.dll.config $(OUTDIR)
 
 release:
-	@(cd build && ./xbuild.sh $(MONO) $(MONO_LDFLAGS) /property:config=Release /property:FIELDWORKS=$(FIELDWORKS)) || true
+	@cd build && ./xbuild.sh $(MONO) $(MONO_LDFLAGS) /property:config=Release /property:FIELDWORKS=$(FIELDWORKS)
 	@for subdir in $(SRCDIRS); do \
 	  echo making in $$subdir; \
-	  (cd $$subdir && $(MAKE) release FIELDWORKS=$(FIELDWORKS)) || true; \
+	  (cd $$subdir && $(MAKE) release FIELDWORKS=$(FIELDWORKS)) || break; \
 	done
 	@mkdir -p $(RELEASEOUT)/EC/Plugins
 	@for file in $(PLUGINS); do \
 	  cp -p redist/EC/Plugins/"$$file" $(RELEASEOUT)/EC/Plugins; \
 	done
-	@if [ -n $(FIELDWORKS) ]; then (cp -pR redist/Help $(RELEASEOUT)); fi || true
+	@if [ -n $(FIELDWORKS) ]; then cp -pR redist/Help $(RELEASEOUT); fi
 	@cp -p redist/libTECkit*.so $(RELEASEOUT)
 	@cp -p src/EncCnvtrs/SilEncConverters40.dll.config $(RELEASEOUT)
 	@cp -p src/CcEC/CcEC.dll.config $(RELEASEOUT)
 	@cp -p src/TestEncCnvtrs/TestEncCnvtrs.dll.config $(RELEASEOUT)
 
 clean:
-	@(cd build && ./xbuild.sh $(MONO) $(MONO_LDFLAGS) /target:clean) || true
+	@cd build && ./xbuild.sh $(MONO) $(MONO_LDFLAGS) /target:clean
 	@for subdir in $(SRCDIRS); do \
 	  echo making in $$subdir; \
 	  (cd $$subdir && $(MAKE) clean) || true; \
 	done
-	@if [ -d $(OUTDIR) ]; then (cd $(OUTDIR) && rm -f *.xml); fi || true
-	@if [ -d $(OUTDIR) ]; then (cd $(OUTDIR) && rm -rf EC); fi || true
-	@if [ -d $(RELEASEOUT) ]; then (cd $(RELEASEOUT) && rm -f *.xml); fi || true
-	@if [ -d $(RELEASEOUT) ]; then (cd $(RELEASEOUT) && rm -rf EC); fi || true
+	@if [ -d $(OUTDIR) ]; then cd $(OUTDIR) && rm -f *.xml; fi
+	@if [ -d $(OUTDIR) ]; then cd $(OUTDIR) && rm -rf EC; fi
+	@if [ -d $(RELEASEOUT) ]; then cd $(RELEASEOUT) && rm -f *.xml; fi
+	@if [ -d $(RELEASEOUT) ]; then cd $(RELEASEOUT) && rm -rf EC; fi
 	@rm -f *~
 
 # we need to keep the generated configure script and Makefile for packaging
@@ -105,7 +105,7 @@ distclean: packageclean
 install: release
 	@for subdir in $(SRCDIRS); do \
 	  echo installing in $$subdir; \
-	  (cd $$subdir && $(MAKE) install) || true; \
+	  (cd $$subdir && $(MAKE) install) || break; \
 	done
 	@mkdir -p $(DESTDIR)$(LIBDIR)/EC/Plugins
 	@for file in $(DLLS); do \
@@ -114,7 +114,7 @@ install: release
 	@for file in $(PLUGINS); do \
 	  cp -p redist/EC/Plugins/"$$file" $(DESTDIR)$(LIBDIR)/EC/Plugins; \
 	done
-	@if [ -n $(FIELDWORKS) ]; then (cp -pR redist/Help $(DESTDIR)$(LIBDIR)); fi || true
+	@if [ -n $(FIELDWORKS) ]; then cp -pR redist/Help $(DESTDIR)$(LIBDIR); fi
 	@if [ `uname -m` = "x86_64" ]; then \
 	for file in redist/libTECkit*x86_64.so; do \
 	  $(INSTALL) $$file $(DESTDIR)$(LIBDIR); \
@@ -152,11 +152,13 @@ check: all
 	  find $(NUNITROOT) -name nunit.core.dll -exec cp -p '{}' $(OUTDIR) ';' -print ; \
 	  find $(NUNITROOT) -name nunit.core.interfaces.dll -exec cp -p '{}' $(OUTDIR) ';' -print ; \
 	fi
-	@(cd build && LD_LIBRARY_PATH="$(OUTDIR)" ./xbuild.sh $(MONO) $(MONO_LDFLAGS) /target:test) || true
+	@cd build && LD_LIBRARY_PATH="$(OUTDIR)" ./xbuild.sh $(MONO) $(MONO_LDFLAGS) /target:test
 	@for subdir in $(SRCDIRS); do \
 	  echo checking in $$subdir; \
-	  (cd $$subdir && $(MAKE) check) || true; \
+	  (cd $$subdir && $(MAKE) check) || break; \
 	done
+
 test:
 	@cd src/ECDriver/linux && $(MAKE) test
 
+.PHONY: all debug release clean packageclean distclean install install-debug uninstall check test
