--- a/debian-fieldworks/rules
+++ b/debian-fieldworks/rules
@@ -24,6 +24,12 @@ override_dh_auto_clean:
 override_dh_autoreconf:
 	./autogen.sh
 
+override_dh_makeshibs:
+	dh_makeshlibs = -X/usr/lib/fieldworks/
+
+override_dh_strip:
+	dh_strip = -k
+
 override_dh_shlibdeps:
 	dh_shlibdeps -l $(MONO_PREFIX)/lib
 
