Use icu from /usr/lib/fieldworks for FieldWorks builds ---  debian-fieldworks/control | 5 +++--  src/IcuEC/Makefile.in     | 5 ++---  2 files changed, 5 insertions(+), 5 deletions(-)

--- a/src/IcuEC/Makefile.in
+++ b/src/IcuEC/Makefile.in
@@ -28,9 +28,8 @@ ICULIBS = -licuuc -licui18n
 ICUINCLUDE = 
 else
 LIBDIR = $(exec_prefix)/lib/fieldworks
-ICUPATH := $(shell find $(HOME) -name libicuuc.so -print | grep /Lib/src/icu/install | sort | head -1 | xargs dirname)
-ICULIBS := $(ICUPATH)/libicuuc.so $(ICUPATH)/libicui18n.so
-ICUINCLUDE := -I$(shell find $(HOME) -name ucnv.h -print | grep /Lib/src/icu/install.*/unicode/ucnv.h | sort | head -1 | xargs dirname | xargs dirname)
+ICULIBS := -L$(LIBDIR) -licuuc -licui18n
+ICUINCLUDE := -I$(ROOTDIR)/include
 endif
 
 # the unmarked case is 32-bit (i686)
