--- a/debian-fieldworks/control
+++ b/debian-fieldworks/control
@@ -2,10 +2,11 @@ Source: fieldworks-enc-converters
 Priority: optional
 Maintainer: Stephen McConnel <stephen_mcconnel@sil.org>
 Build-Depends: debhelper (>= 7.0.50~), autotools-dev, python-dev (>=2.6),
- dh-autoreconf, libicu-dev, lsb-release, devscripts, mono-sil,
- libgdiplus-sil, geckofx29
+ dh-autoreconf, lsb-release, devscripts,
 Standards-Version: 3.9.1
 Section: libs
+ mono-sil, libgdiplus-sil, geckofx29,
+ fieldworks-applications
 Homepage: http://hg.palaso.org/ec-main
 
 Package: fieldworks-enc-converters
