update build to VS 2015

--- a/src/AIGuesserEC/AIGuesserEC 2010.csproj
+++ b/src/AIGuesserEC/AIGuesserEC 2010.csproj
@@ -276,7 +276,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>copy $(TargetPath) C:\Src\StoryEditor\output\$(ConfigurationName)</PostBuildEvent>
   </PropertyGroup>
 </Project>
