--- a/src/IcuEC/IcuEC 2010.csproj
+++ b/src/IcuEC/IcuEC 2010.csproj
@@ -165,9 +165,9 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>copy $(SolutionDir)DistFiles\windows\icu\bin\icuuc54.dll $(OutDir)
-copy $(SolutionDir)DistFiles\windows\icu\bin\icuin54.dll $(OutDir)
-copy $(SolutionDir)DistFiles\windows\icu\bin\icudt54.dll $(OutDir)
+    <PostBuildEvent>copy $(SolutionDir)DistFiles\windows\icu\bin\icuuc54.dll $(SolutionDir)output\debug
+copy $(SolutionDir)DistFiles\windows\icu\bin\icuin54.dll $(SolutionDir)output\debug
+copy $(SolutionDir)DistFiles\windows\icu\bin\icudt54.dll $(SolutionDir)output\debug
 </PostBuildEvent>
   </PropertyGroup>
 </Project>
