since my new .gitgnore excluded 'bin' folders, we didn't get the new ICU 54 DLLs... force added them

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ x64/
 x86/
 bld/
 [Bb]in/
+# there's a 'bin' sub-folder in DistFiles that we need to include
+!DistFiles/windows/icu/bin/
 [Oo]bj/
 [Ll]og/
 /[Oo]utput/
